# pyrmq

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  .releaserc.json  AUTHORS  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-test.txt  setup.py  tox.ini
.cursor/rules/: coding_style.mdc  commands.mdc  documentation.mdc  error_handling.mdc  import_order.mdc  python_compatibility.mdc  testing.mdc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  testing.yml
docs/: Makefile  api.rst  conf.py  index.rst  install.rst  testing.rst  usage.rst
pyrmq/: __init__.py  consumer.py  publisher.py
pyrmq/tests/: __init__.py  conftest.py  test_consumer.py  test_publisher.py
